[package]
name = "bit_mask_ring_buf"
version = "0.1.2"
authors = ["Billy Messenger <https://github.com/BillyDM>"]
license = "MIT"
keywords = ["ring", "circular", "buffer", "dsp"]
categories = ["data-structures"]
edition = "2018"
description = "A fast ring buffer implementation with cheap and safe indexing"
repository = "https://github.com/BillyDM/bit_mask_ring_buf"
documentation = "https://docs.rs/bit_mask_ring_buf"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
